[gd_scene load_steps=10 format=2]

[ext_resource path="res://Obstacles/Boss/Boss.gd" type="Script" id=1]
[ext_resource path="res://Obstacles/Boss/boss.png" type="Texture" id=2]
[ext_resource path="res://Obstacles/Boss/Boss_Bone/Boss_Bone.tscn" type="PackedScene" id=3]
[ext_resource path="res://Fire/Fire.tscn" type="PackedScene" id=4]
[ext_resource path="res://Obstacles/FireShooter/FireShooter.tscn" type="PackedScene" id=5]
[ext_resource path="res://Obstacles/Audio/explode_boss.wav" type="AudioStream" id=6]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=2]
radius = 59.3737

[sub_resource type="Animation" id=3]
resource_name = "Wobble"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 0.68302, 0.732043, 0.732043 ),
"update": 0,
"values": [ Vector2( 1.2, 1 ), Vector2( 1, 1.2 ), Vector2( 1.2, 1 ) ]
}

[node name="Boss" type="Node2D"]
scale = Vector2( 1.16697, 1.03303 )
script = ExtResource( 1 )

[node name="Eye_Sprite" type="AnimatedSprite" parent="."]
scale = Vector2( 2, 2 )
frames = SubResource( 1 )

[node name="Area2D" type="Area2D" parent="." groups=[
"Enemies",
]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 2 )

[node name="Flash_Timer" type="Timer" parent="."]
wait_time = 0.05

[node name="Bone_Root" type="Node2D" parent="."]
show_behind_parent = true

[node name="Boss_Bone" parent="Bone_Root" instance=ExtResource( 3 )]

[node name="Boss_Bone2" parent="Bone_Root" instance=ExtResource( 3 )]
rotation = 0.785398

[node name="Boss_Bone3" parent="Bone_Root" instance=ExtResource( 3 )]
rotation = 1.5708

[node name="Boss_Bone4" parent="Bone_Root" instance=ExtResource( 3 )]
rotation = 2.35619

[node name="Boss_Bone5" parent="Bone_Root" instance=ExtResource( 3 )]
rotation = -3.14159

[node name="Boss_Bone6" parent="Bone_Root" instance=ExtResource( 3 )]
rotation = -2.35619

[node name="Boss_Bone7" parent="Bone_Root" instance=ExtResource( 3 )]
rotation = -1.5708

[node name="Boss_Bone8" parent="Bone_Root" instance=ExtResource( 3 )]
rotation = -0.785398

[node name="Blast_Timer" type="Timer" parent="."]

[node name="Pulse_Timer" type="Timer" parent="."]
wait_time = 0.3

[node name="Fire" parent="." instance=ExtResource( 4 )]
visible = false

[node name="Fireshooter_Inside_Root" type="Node2D" parent="."]

[node name="Spawn_Timer" type="Timer" parent="."]
wait_time = 5.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Wobble"
anims/Wobble = SubResource( 3 )

[node name="Fireshooter_Outside_Root" type="Node2D" parent="."]

[node name="Node2D" type="Node2D" parent="Fireshooter_Outside_Root"]

[node name="FireShooter" parent="Fireshooter_Outside_Root/Node2D" instance=ExtResource( 5 )]
position = Vector2( 150, 0 )

[node name="Node2D2" type="Node2D" parent="Fireshooter_Outside_Root"]
rotation = 0.523599

[node name="FireShooter" parent="Fireshooter_Outside_Root/Node2D2" instance=ExtResource( 5 )]
position = Vector2( 150, 0 )

[node name="Node2D3" type="Node2D" parent="Fireshooter_Outside_Root"]
rotation = 1.0472

[node name="FireShooter" parent="Fireshooter_Outside_Root/Node2D3" instance=ExtResource( 5 )]
position = Vector2( 150, 0 )

[node name="Node2D4" type="Node2D" parent="Fireshooter_Outside_Root"]
rotation = 1.5708

[node name="FireShooter" parent="Fireshooter_Outside_Root/Node2D4" instance=ExtResource( 5 )]
position = Vector2( 150, 0 )

[node name="Node2D5" type="Node2D" parent="Fireshooter_Outside_Root"]
rotation = 2.0944

[node name="FireShooter" parent="Fireshooter_Outside_Root/Node2D5" instance=ExtResource( 5 )]
position = Vector2( 150, 0 )

[node name="Node2D6" type="Node2D" parent="Fireshooter_Outside_Root"]
rotation = 2.61799

[node name="FireShooter" parent="Fireshooter_Outside_Root/Node2D6" instance=ExtResource( 5 )]
position = Vector2( 150, 0 )

[node name="Node2D7" type="Node2D" parent="Fireshooter_Outside_Root"]
rotation = 3.14159

[node name="FireShooter" parent="Fireshooter_Outside_Root/Node2D7" instance=ExtResource( 5 )]
position = Vector2( 150, 0 )

[node name="Node2D8" type="Node2D" parent="Fireshooter_Outside_Root"]
rotation = 3.66519

[node name="FireShooter" parent="Fireshooter_Outside_Root/Node2D8" instance=ExtResource( 5 )]
position = Vector2( 150, 0 )

[node name="Node2D9" type="Node2D" parent="Fireshooter_Outside_Root"]
rotation = 4.18879

[node name="FireShooter" parent="Fireshooter_Outside_Root/Node2D9" instance=ExtResource( 5 )]
position = Vector2( 150, 0 )

[node name="Node2D10" type="Node2D" parent="Fireshooter_Outside_Root"]
rotation = 4.71239

[node name="FireShooter" parent="Fireshooter_Outside_Root/Node2D10" instance=ExtResource( 5 )]
position = Vector2( 150, 0 )

[node name="Node2D11" type="Node2D" parent="Fireshooter_Outside_Root"]
rotation = 5.23599

[node name="FireShooter" parent="Fireshooter_Outside_Root/Node2D11" instance=ExtResource( 5 )]
position = Vector2( 150, 0 )

[node name="Node2D12" type="Node2D" parent="Fireshooter_Outside_Root"]
rotation = 5.75959

[node name="FireShooter" parent="Fireshooter_Outside_Root/Node2D12" instance=ExtResource( 5 )]
position = Vector2( 150, 0 )

[node name="Explode_SFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = 3.0
pitch_scale = 0.5

[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="shake_requested" from="Bone_Root/Boss_Bone" to="." method="_on_shake_requested"]
[connection signal="shake_requested" from="Bone_Root/Boss_Bone2" to="." method="_on_shake_requested"]
[connection signal="shake_requested" from="Bone_Root/Boss_Bone3" to="." method="_on_shake_requested"]
[connection signal="shake_requested" from="Bone_Root/Boss_Bone4" to="." method="_on_shake_requested"]
[connection signal="shake_requested" from="Bone_Root/Boss_Bone5" to="." method="_on_shake_requested"]
[connection signal="shake_requested" from="Bone_Root/Boss_Bone6" to="." method="_on_shake_requested"]
[connection signal="shake_requested" from="Bone_Root/Boss_Bone7" to="." method="_on_shake_requested"]
[connection signal="shake_requested" from="Bone_Root/Boss_Bone8" to="." method="_on_shake_requested"]
[connection signal="timeout" from="Blast_Timer" to="." method="_on_Blast_Timer_timeout"]
[connection signal="timeout" from="Pulse_Timer" to="." method="_on_Pulse_Timer_timeout"]
[connection signal="timeout" from="Spawn_Timer" to="." method="_on_Spawn_Timer_timeout"]
[connection signal="finished" from="Explode_SFX" to="." method="_on_Explode_SFX_finished"]
